# semantic-intent-scanner

./: LICENSE  README.md  pyproject.toml
scanner/: __init__.py  cli.py  directory_audit.py  evaluator.py  invariants.py  report.py  substrate.py
tests/fixtures/benign/: git-status.md
tests/fixtures/malicious/: reviewer.test.ts  solana-wallet-tracker.md
tests/fixtures/suspicious/: project-setup.md
